--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
 	
@@ -29,7 +29,7 @@
 				Adding a random puppy to your app is now easy as pie. Find brand new puppies everyday!
 			</p>
 			<div class="jumbotron">
-				<img class="puppy img-thumbnail" src="{{.}}"/>
+				<img class="puppy img-thumbnail img-responsive" src="{{.}}"/>
 				<p class="lead">
 					<a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.thepuppyapi.com&media={{.}}&description=Pin%20Your%20Puppy" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
 					</br>
